# cli-pybench

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  release.py  requirements_dev.txt
benchmarks/: analyze_benchmarks.ipynb  bench_pybench.py
src/pybench/: __init__.py  _bench.py  _fixtures.py  _metadata.py  cli.py
tests/: test_pybench.py
