[project]
license = { file = "LICENSE" }
name = "cli-pybench"
version = "0.0.8"
description = "your_description_here"
readme = "README.md"
requires-python = ">=3.7"
authors = [{ name = "Cangyuan Li", email = "everest229@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["polars >= 1.0.0", "toml", "tqdm"]

[project.urls]
"Homepage" = "https://github.com/CangyuanLi/cli-pybench"
"Source" = "https://github.com/CangyuanLi/cli-pybench"
"Bug Reports" = "https://github.com/CangyuanLi/cli-pybench/issues"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
pybench = "pybench.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]
