[project]
name = "cli-pybench"
version = "0.1.0"
description = "A pytest-like framework for benchmarking"
readme = "README.md"
requires-python = ">=3.7"
authors = [{ name = "Cangyuan Li", email = "everest229@gmail.com" }]
classifiers = ["Programming Language :: Python :: 3"]
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["polars >= 1.0.0", "toml", "tqdm"]

[project.urls]
"Homepage" = "https://github.com/CangyuanLi/cli-pybench"
"Source" = "https://github.com/CangyuanLi/cli-pybench"
"Bug Reports" = "https://github.com/CangyuanLi/cli-pybench/issues"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
pybench = "pybench.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pybench]
repeat = 100
number = 10
warmups = 1
partition_by = ["commit"]

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]
